text content changed

--- a/abou.html
+++ b/abou.html
@@ -17,12 +17,12 @@
 
 <body>
     <div class="bg-light p-2">
-        <p class="m-0 text-dark text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry
+        <p class="m-0 text-dark text-center">Agriculture Becomes Easy
         </p>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Company Name</a>
+            <a class="navbar-brand" href="#">SBC</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <section id="sliding-area">
+    <!-- <section id="sliding-area">
         <div class="">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -104,22 +104,14 @@
                 </button>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="cards">
         <div class="container my-5 p-5">
             <div class="">
-                <p class="fs-1 fw-bold text-center">Some information</p>
-                <p class="fs-4 text-mute text-center">Information Subline</p>
+                <p class="fs-1 fw-bold text-center">About Us</p>
 
-                <p class="lead text-justify mb-5">It is a long established fact that a reader will be distracted by the
-                    readable content
-                    of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                    normal distribution of letters, as opposed to using 'Content here, content here', making it look
-                    like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                    their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their
-                    infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
-                    (injected humour and the like).</p>
+                <p class="lead text-justify mb-5">Thanks to everyone who has supported us for 12 years since we founded. More than 12 years have passed since we opened a small operating office in Dhaka, Bangladesh in 2010. At the beginning we were mainly dealing with seeds. Now we are actively involved in other agricultural inputs & production business.</p>
             </div>
         </div>
     </section>
@@ -130,20 +122,8 @@
                 <div class="col-md-6 col-lg-6 col-sm-6">
                     <div class="d-flex align-items-center h-100">
                         <div>
-                            <p class="fs-3 m-0">Some Headline</p>
-                            <p class="lead text-justify">It is a long established fact that a reader will be distracted
-                                by the readable content
-                                of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                                more-or-less
-                                normal distribution of letters, as opposed to using 'Content here, content here', making
-                                it look
-                                like readable English. Many desktop publishing packages and web page editors now use
-                                Lorem Ipsum as
-                                their default model text, and a search for 'lorem ipsum' will uncover many web sites
-                                still in their
-                                infancy. Various versions have evolved over the years, sometimes by accident, sometimes
-                                on purpose
-                                (injected humour and the like).</p>
+                            <p class="fs-3 m-0">Our Concept</p>
+                            <p class="lead text-justify">To help achieve sustainable food security for Bangladesh & beyond through close collaboration with government institutions, private enterprises and visibly with the Farmers</p>
                         </div>
 
                     </div>
@@ -157,20 +137,8 @@
                 <div class="col-md-6 col-lg-6 col-sm-6 order-2">
                     <div class="d-flex align-items-center h-100">
                         <div>
-                            <p class="fs-3 m-0">Some Headline</p>
-                            <p class="lead text-justify">It is a long established fact that a reader will be distracted
-                                by the readable content
-                                of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                                more-or-less
-                                normal distribution of letters, as opposed to using 'Content here, content here', making
-                                it look
-                                like readable English. Many desktop publishing packages and web page editors now use
-                                Lorem Ipsum as
-                                their default model text, and a search for 'lorem ipsum' will uncover many web sites
-                                still in their
-                                infancy. Various versions have evolved over the years, sometimes by accident, sometimes
-                                on purpose
-                                (injected humour and the like).</p>
+                            <p class="fs-3 m-0">Our Task</p>
+                            <p class="lead text-justify">To become the leading provider of quality agricultural & horticultural products that guarantee quality farm produces and improve the capacity of farmers in Bangladesh & beyond.</p>
                         </div>
                     </div>
                 </div>
@@ -187,11 +155,12 @@
                 <div class="about-background">
                     <div class="overlay mb-2 px-5 py-5 text-light d-flex align-self-center">
                         <div class="row align-items-center">
-                            <div class="col-md-5 d-flex flex-column justify-content-between">
-                                <h1 class="mb-5">Some Headline</h1>
-                                <p class="mb-5">Empower creativity around the world. We are an open marketplace for
-                                    independent artists to upload and enable their work on a wide array of wall art,
-                                    home decor, lifestyle products and more.</p>
+                            <div class="col-md-12 d-flex flex-column justify-content-between">
+                                <h1 class="mb-5">Our Standard</h1>
+                                <p class="mb-5">Everything we do and support has an impact on people & the planet. We operate ethically and strive constantly to improve our standards to reach a globally recognized position for high quality services. <br>
+                                    Our entire portfolio is designed & developed in-house and draws on its extensive experience in Bangladesh’s agricultural landscape, taking into account specific requirements of our clients and partners. <br>
+                                    In addition to offering a quality agricultural enhancement services, we continue to innovate and seeks to break new grounds when it comes to addressing the holistic needs of agriculture system actors.
+                                </p>
                                 <a href="" class="text-white">Learn More</a>
                             </div>
                         </div>
@@ -204,7 +173,6 @@
     <section class="others">
         <div class="container mt-5">
             <p class="fs-1 fw-bold text-center">Informations for other concerns</p>
-            <p class="fs-4 text-mute text-center">Information Subline</p>
             <p class="lead text-justify my-5">It is a long established fact that a reader will be distracted by the
                 readable content
                 of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
