--- a/about_meera.html
+++ b/about_meera.html
@@ -17,12 +17,12 @@
 
 <body>
     <div class="bg-light p-2">
-        <p class="m-0 text-dark text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry
+        <p class="m-0 text-dark text-center">Agriculture Becomes Easy
         </p>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Company Name</a>
+            <a class="navbar-brand" href="#">Meeraseed</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
                             <li><a class="dropdown-item" href="info.html">INFO 3</a></li>
                         </ul>
                     </li>
-                </ul>
+                </ul>                
                 <a class="btn btn-danger rounded-0" href="contact.html">Contact US</a>
             </div>
         </div>
@@ -71,14 +71,14 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item h-img active">
-                        <img src="images/art.jpg" class="d-block w-100 h-img" alt="...">
+                        <img src="images/artist-background.jpg" class="d-block w-100 h-img" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item h-img">
-                        <img src="images/4.jpg" class="d-block w-100 h-70" alt="...">
+                        <img src="images/star.jpg" class="d-block w-100 h-70" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
@@ -109,27 +109,42 @@
     <section id="cards">
         <div class="container my-5 p-5">
             <div class="">
-                <p class="fs-1 fw-bold text-center">Business Area</p>
-                <p class="fs-4 text-mute text-center">Vegetable Seeds</p>
+                <p class="fs-1 fw-bold text-center">About Us</p>
 
-                <p class="lead text-justify mb-5">Realizing the unavailability of quality seeds in the Bangladesh market, 2010, we have involved more in introducing Quality seeds together with our international associates. We invested millions & continuing, just to ensure that our farmers are getting quality seeds to produce quality crops for a healthy future. <br>
-                    Now we are working as a trusted backend supplier of Quality Vegetable Seeds for many of well-known retailers across the country. It will be worth to mention that to adapt the future agriculture; we started introducing wide range of innovative products for Vertical Farm, Glass House Farms & Indoor Farms. <br>
-                    As of now almost 40% of our population has got internet access. Considering this, we are introducing our online store for our farmer’s convenient. This will help them to select seeds they require and get those delivered at their doorstep by making payments through mobile banking system.
-                </p>
+                <p class="lead text-justify mb-5">Thanks to everyone who has supported us for 12 years since we founded. More than 12 years have passed since we opened a small operating office in Dhaka, Bangladesh in 2010. </p>
+            </div>
+        </div>
+    </section>
 
-                <p class="fs-4 text-mute text-center">Farm Equipment</p>
+    <section id="info-content">
+        <div class="container mb-5">
+            <div class="row">
+                <div class="col-md-6 col-lg-6 col-sm-6">
+                    <div class="d-flex align-items-center h-100">
+                        <div>
+                            <p class="fs-3 m-0">Our Concept</p>
+                            <p class="lead text-justify">To help achieve sustainable food security for Bangladesh & beyond through close collaboration with government institutions, private enterprises and visibly with the Farmers.</p>
+                        </div>
 
-                <p class="lead text-justify mb-5">Considering the climate changing issues and off course human health, we have involved ourselves in research, sourcing & delivering of top quality agricultural inputs to produce soilless vegetables crops using less water, less fertilizers & without chemical pesticides. We are working together with world leading horticultural inputs researchers & providers from The Netherlands, Spain & Japan to get the best outcome for the farmers & obviously for the country as a whole.</p>
+                    </div>
 
-                <p class="fs-4 text-mute text-center">Plant Care Software - Indoor Farms</p>
-
-                <p class="lead text-justify mb-5">Cutting edge technologies enable entrepreneurs to grow fresh crops locally and throughout the year. Based on different hydroponics techniques, our technology includes irrigation, lighting, climate, automation and farm management solutions, and vertical farming equipment as well as agronomic crop growth recipes. <br>
-                    Running a vertical farm may seem tricky; that’s why we are developing application that enables farmers to manage their farm in a couple of clicks. Our Platform contains knowledge sourced from hundreds of farming professionals - agronomists, plant health specialists, engineers, biologists, etc. and lets farmer make smart decisions to achieve greater yields.</p>
-
-                <p class="fs-4 text-mute text-center">Specialized Export Projects</p>
-
-                <p class="lead text-justify mb-5">It’s our pleasure to declare that, we are preparing to implement a commercial food production project in different parts of the country with the purpose to export to different countries. For complying with the Safe food guidelines, these particular projects have to follow the GSPP [Good Plant & Production Practice] rules in every phases of its production. We have already entered into specific contract with farmers for contractual production of these crops. We hope, these projects will not only cause good financial revenue for us but also will have a great impact of our economy as a whole.
-                </p>
+                </div>
+                <div class="col-md-6 col-lg-6 col-sm-6">
+                    <img src="/images/decor.jpg" class="img-thumbnail b-0 rounded-0" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-6 col-sm-6 order-2">
+                    <div class="d-flex align-items-center h-100">
+                        <div>
+                            <p class="fs-3 m-0">Our Task</p>
+                            <p class="lead text-justify">To become the leading provider of quality agricultural & horticultural seeds that guarantee quality farm produces and improve the capacity of farmers in Bangladesh & beyond.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-6 col-sm-6 order-1">
+                    <img src="/images/art.jpg" class="img-thumbnail b-0 rounded-0" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -137,14 +152,14 @@
     <section id="artist-dialouge">
         <div class="row g-0">
             <div class="col-md-12 col-lg-12 col-sm-12">
-                <div class="info-background">
+                <div class="about-background">
                     <div class="overlay mb-2 px-5 py-5 text-light d-flex align-self-center">
                         <div class="row align-items-center">
-                            <div class="col-md-5 d-flex flex-column justify-content-between">
-                                <h1 class="mb-5">Some Headline</h1>
-                                <p class="mb-5">Empower creativity around the world. We are an open marketplace for
-                                    independent artists to upload and enable their work on a wide array of wall art,
-                                    home decor, lifestyle products and more.</p>
+                            <div class="col-md-12 d-flex flex-column justify-content-between">
+                                <h1 class="mb-5">Our Standard</h1>
+                                <p class="mb-5">Everything we do and support has an impact on people & the planet. We operate ethically and strive constantly to improve our standards to reach a globally recognized position for high quality services. <br>
+                                    Our entire portfolio is designed & developed in-house and draws on its extensive experience in Bangladesh’s agricultural landscape, taking into account specific requirements of our farmers and partners.
+                                </p>
                                 <a href="" class="text-white">Learn More</a>
                             </div>
                         </div>
@@ -154,62 +169,30 @@
         </div>
     </section>
 
-
-    <section id="accordion">
-        <div class="container my-5 p-5">
-            <div class="">
-                <p class="fs-1 fw-bold text-center">Few Information</p>
-                <p class="fs-4 text-mute text-center">about Concepts And Standards</p>
-
-                <div class="accordion accordion-flush" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                aria-controls="flush-collapseOne">
-                                Concept
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">To help achieve sustainable food security for Bangladesh & beyond through close collaboration with government institutions, private enterprises and visibly with the Farmers.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                aria-controls="flush-collapseTwo">
-                                Task
-                            </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">To become the leading provider of quality agricultural & horticultural products that guarantee quality farm produces and improve the capacity of farmers in Bangladesh & beyond.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingThree">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                Standard
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">
-                                <p>Everything we do and support has an impact on people & the planet. We operate ethically and strive constantly to improve our standards to reach a globally recognized position for high quality services. <br>
-                                    Our entire portfolio is designed & developed in-house and draws on its extensive experience in Bangladesh’s agricultural landscape, taking into account specific requirements of our clients and partners. <br>
-                                    In addition to offering a quality agricultural enhancement services, we continue to innovate and seeks to break new grounds when it comes to addressing the holistic needs of agriculture system actors.</p>
-                            </div>
-                        </div>
-                    </div>
+    <section class="others">
+        <div class="container mt-5">
+            <p class="fs-1 fw-bold text-center">Informations for other concerns</p>
+            <p class="lead text-justify my-5">It is a long established fact that a reader will be distracted by the
+                readable content
+                of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                normal distribution of letters, as opposed to using 'Content here, content here', making it look
+                like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
+                their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their
+                infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
+                (injected humour and the like).</p>
+            <div class="row justify-content-evenly mb-5">
+                <div class="col">
+                    <img src="logo/LOGO.png" class="img-thumbnail" alt="..." style="height: 300px;">
+                </div>
+                <div class="col">
+                    <img src="logo/SBC.png" class="img-thumbnail" alt="..." style="height: 300px;">
+                </div>
+                <div class="col">
+                    <img src="logo/MEERA.png" class="img-thumbnail" alt="..." style="height: 300px;">
                 </div>
             </div>
         </div>
     </section>
-
 
     <section id="footer">
         <div class="row g-0">
