--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
     <div class="bg-light p-2">
-        <p class="m-0 text-dark text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p class="m-0 text-dark text-center">Agriculture Becomes Easy</p>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Company Name</a>
+            <a class="navbar-brand" href="#">SBC</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -108,16 +108,10 @@
     <section id="cards">
         <div class="container my-5 p-5">
             <div class="">
-                <p class="fs-1 fw-bold text-center">Head Line</p>
+                <p class="fs-1 fw-bold text-center">Welcome to SBC</p>
                 <p class="fs-4 text-mute text-center">Sub Line</p>
 
-                <p class="lead text-justify mb-5">It is a long established fact that a reader will be distracted by the readable content
-                    of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                    normal distribution of letters, as opposed to using 'Content here, content here', making it look
-                    like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                    their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their
-                    infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
-                    (injected humour and the like).</p>
+                <p class="lead text-justify mb-5">Thanks to everyone who has supported us for 12 years since we founded. More than 12 years have passed since we opened a small operating office in Dhaka, Bangladesh in 2010. At the beginning we were mainly dealing with seeds. Now we are actively involved in other agricultural inputs & production business. </p>
             </div>
             <div class="slide-cards">
                 <div class="rounded-0">
@@ -191,10 +185,9 @@
                     <div class="overlay mb-2 px-5 py-5 text-light d-flex align-self-center">
                         <div class="row align-items-center">
                             <div class="col-md-5 d-flex flex-column justify-content-between">
-                                <h1 class="mb-5">Some Headline</h1>
-                                <p class="mb-5">Empower creativity around the world. We are an open marketplace for
-                                    independent artists to upload and enable their work on a wide array of wall art,
-                                    home decor, lifestyle products and more.</p>
+                                <h1 class="mb-5">Background</h1>
+                                <p class="mb-5">As a business founded by family, we understand the importance of an unconditional customer service. We believe in long term relationships with our clients. The people of MAI do what they say and say what they do. Being nationally active for long, we know our way around the country. We literally feel at home at every corner of this land.</p>
+                                <p class="mb-5">Commencing in 2006, we have been involved in Agricultural Commodity trade largely with Rice & Maize. In 2008 Natural Compost, Jute sacks have been added to the portfolio. In the year 2010 we engaged ourselves in sourcing and sales of Horticultural & Agricultural seeds. In 2014 we started to source & sales of mulching materials & yellow straps. We are one of the pioneers to introduce mulching & packed coco-substrate in Bangladesh. </p>
                                 <a href="" class="text-white">Learn More</a>
                             </div>
                         </div>
