--- a/index_meera.html
+++ b/index_meera.html
@@ -17,12 +17,11 @@
 
 <body>
     <div class="bg-light p-2">
-        <p class="m-0 text-dark text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry
-        </p>
+        <p class="m-0 text-dark text-center">Agriculture Becomes Easy</p>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Company Name</a>
+            <a class="navbar-brand" href="#">Meeraseed</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -58,7 +57,7 @@
         </div>
     </nav>
 
-    <!-- <section id="sliding-area">
+    <section id="sliding-area">
         <div class="">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -71,21 +70,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item h-img active">
-                        <img src="images/art.jpg" class="d-block w-100 h-img" alt="...">
+                        <img src="images/1.jpg" class="d-block w-100 h-img" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item h-img">
-                        <img src="images/4.jpg" class="d-block w-100 h-70" alt="...">
+                        <img src="images/2.jpg" class="d-block w-100 h-70" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item h-img">
-                        <img src="images/carousel3.jpg" class="d-block w-100 h-70" alt="...">
+                        <img src="images/3.jpg" class="d-block w-100 h-70" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
@@ -104,47 +103,92 @@
                 </button>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <section id="cards">
         <div class="container my-5 p-5">
             <div class="">
-                <p class="fs-1 fw-bold text-center">Business Area</p>
-                <p class="fs-4 text-mute text-center">Vegetable Seeds</p>
+                <p class="fs-1 fw-bold text-center">Welcome to Meeraseed</p>
 
-                <p class="lead text-justify mb-5">Realizing the unavailability of quality seeds in the Bangladesh market, 2010, we have involved more in introducing Quality seeds together with our international associates. We invested millions & continuing, just to ensure that our farmers are getting quality seeds to produce quality crops for a healthy future. <br>
-                    Now we are working as a trusted backend supplier of Quality Vegetable Seeds for many of well-known retailers across the country. It will be worth to mention that to adapt the future agriculture; we started introducing wide range of innovative products for Vertical Farm, Glass House Farms & Indoor Farms. <br>
-                    As of now almost 40% of our population has got internet access. Considering this, we are introducing our online store for our farmer’s convenient. This will help them to select seeds they require and get those delivered at their doorstep by making payments through mobile banking system.
-                </p>
+                <p class="lead text-justify mb-5">Thanks to everyone who has supported us for 12 years since we founded. More than 12 years have passed since we opened a small operating office in Dhaka, Bangladesh in 2010.</p>
+            </div>
+            <div class="slide-cards">
+                <div class="rounded-0">
+                    <div class="card mx-3 rounded-0">
+                        <img src="/images/products/1.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Title</h5>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="rounded-0">
+                    <div class="card mx-3 rounded-0">
+                        <img src="/images/products/2.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Title</h5>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
+                        </div>
+                    </div>
+                </div>
 
-                <p class="fs-4 text-mute text-center">Farm Equipment</p>
+                <div class="rounded-0">
+                    <div class="card mx-3 rounded-0">
+                        <img src="/images/products/3.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Title</h5>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
+                        </div>
+                    </div>
+                </div>
 
-                <p class="lead text-justify mb-5">Considering the climate changing issues and off course human health, we have involved ourselves in research, sourcing & delivering of top quality agricultural inputs to produce soilless vegetables crops using less water, less fertilizers & without chemical pesticides. We are working together with world leading horticultural inputs researchers & providers from The Netherlands, Spain & Japan to get the best outcome for the farmers & obviously for the country as a whole.</p>
+                <div class="rounded-0">
+                    <div class="card mx-3 rounded-0">
+                        <img src="/images/products/4.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Title</h5>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
+                        </div>
+                    </div>
+                </div>
 
-                <p class="fs-4 text-mute text-center">Plant Care Software - Indoor Farms</p>
+                <div class="rounded-0">
+                    <div class="card mx-3 rounded-0">
+                        <img src="/images/products/5.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Title</h5>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
+                        </div>
+                    </div>
+                </div>
 
-                <p class="lead text-justify mb-5">Cutting edge technologies enable entrepreneurs to grow fresh crops locally and throughout the year. Based on different hydroponics techniques, our technology includes irrigation, lighting, climate, automation and farm management solutions, and vertical farming equipment as well as agronomic crop growth recipes. <br>
-                    Running a vertical farm may seem tricky; that’s why we are developing application that enables farmers to manage their farm in a couple of clicks. Our Platform contains knowledge sourced from hundreds of farming professionals - agronomists, plant health specialists, engineers, biologists, etc. and lets farmer make smart decisions to achieve greater yields.</p>
-
-                <p class="fs-4 text-mute text-center">Specialized Export Projects</p>
-
-                <p class="lead text-justify mb-5">It’s our pleasure to declare that, we are preparing to implement a commercial food production project in different parts of the country with the purpose to export to different countries. For complying with the Safe food guidelines, these particular projects have to follow the GSPP [Good Plant & Production Practice] rules in every phases of its production. We have already entered into specific contract with farmers for contractual production of these crops. We hope, these projects will not only cause good financial revenue for us but also will have a great impact of our economy as a whole.
-                </p>
+                <div class="rounded-0">
+                    <div class="card mx-3 rounded-0">
+                        <img src="/images/products/6.jpg" class="card-img-top rounded-0" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Title</h5>
+                            <a href="products/index.html" class="btn btn-sm btn-primary">LINK</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
     </section>
 
     <section id="artist-dialouge">
         <div class="row g-0">
             <div class="col-md-12 col-lg-12 col-sm-12">
-                <div class="info-background">
+                <div class="artist-background">
                     <div class="overlay mb-2 px-5 py-5 text-light d-flex align-self-center">
                         <div class="row align-items-center">
-                            <div class="col-md-5 d-flex flex-column justify-content-between">
-                                <h1 class="mb-5">Some Headline</h1>
-                                <p class="mb-5">Empower creativity around the world. We are an open marketplace for
-                                    independent artists to upload and enable their work on a wide array of wall art,
-                                    home decor, lifestyle products and more.</p>
+                            <div class="col-md-12 d-flex flex-column justify-content-between">
+                                <h1 class="mb-5">Background</h1>
+                                <p class="mb-2">We strongly believe that perfect match between high quality seeds and a local growing condition is what makes crops prosper. Creating that perfect match, together with our clients, is what we have specialized in for over the years.</p>
+                                <p class="mb-2">We started as family business focused on high quality vegetable seeds that are well adapted for use in tropical conditions. MEERA is our premium brand for a broad range of top quality vegetable seeds that are specially chosen for our farmers. The quality of our seeds is what makes us stand out in the top place.</p>
+                                <p class="mb-2">We test and screen our seeds at different trial locations of the country to ascertain their satisfactory performance under specific growing conditions.</p>
+                                <p class="mb-2">As a business founded by family, we understand the importance of an unconditional customer service. We believe in long term relationships with our clients. The people of MEERA do what they say and say what they do. Being nationally active for long, we know our way around the country. We literally feel at home at every corner of this land.</p>
                                 <a href="" class="text-white">Learn More</a>
                             </div>
                         </div>
@@ -153,63 +197,6 @@
             </div>
         </div>
     </section>
-
-
-    <section id="accordion">
-        <div class="container my-5 p-5">
-            <div class="">
-                <p class="fs-1 fw-bold text-center">Few Information</p>
-                <p class="fs-4 text-mute text-center">about Concepts And Standards</p>
-
-                <div class="accordion accordion-flush" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                aria-controls="flush-collapseOne">
-                                Concept
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">To help achieve sustainable food security for Bangladesh & beyond through close collaboration with government institutions, private enterprises and visibly with the Farmers.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                aria-controls="flush-collapseTwo">
-                                Task
-                            </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">To become the leading provider of quality agricultural & horticultural products that guarantee quality farm produces and improve the capacity of farmers in Bangladesh & beyond.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingThree">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                                Standard
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">
-                                <p>Everything we do and support has an impact on people & the planet. We operate ethically and strive constantly to improve our standards to reach a globally recognized position for high quality services. <br>
-                                    Our entire portfolio is designed & developed in-house and draws on its extensive experience in Bangladesh’s agricultural landscape, taking into account specific requirements of our clients and partners. <br>
-                                    In addition to offering a quality agricultural enhancement services, we continue to innovate and seeks to break new grounds when it comes to addressing the holistic needs of agriculture system actors.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <section id="footer">
         <div class="row g-0">
